- Return the restored window size from GetSize() when window is minimized.
- wxCheckListBox now looks more native, especially under XP (Marcin Malich).
- Allow tooltips longer than 64 (up to 128) characters in wxTaskBarIcon
- Fix centering wxFileDialog and allow positioning it
- Allow centering wxMessageDialog on its parent window (troelsk)

wxX11:

- Added mouse wheel support (David Hart).
- Make Enter key activate the default button (David Hart).


2.8.8
-----

All:

- Fixed bug with parsing some dates in wxDateTime (Bob Pesner)
- Fixed bug with parsing negative time zones in wxDateTime::ParseRfc822Date()

All (GUI):

- Added wxWindow::GetNextSibling() and GetPrevSibling()
- Improve wximage::ResampleBox() (Mihai Ciocarlie)
- Implemented ScrollList() in generic wxListCtrl (Tim Kosse)
- Fixed wxXmlResource::GetText() to convert data to current locale's
  charset in ANSI build.

wxMSW:

- Fix rare bug with messages delivered to wrong wxSocket (Tim Kosse)
- Fix setting icons when they have non-default (16*16 and 32*32) sizes
- Fixed wxLocale::GetInfo to use the C locale.
- Don't enable disabled windows when showing them (Harry McKame).
- Fix assert when using owner-drawn menu items with the newest (Vista) SDK

wxGTK:

- Return false from wxEventLoop::Dispatch() if gtk_main_quit() was called and
  so the loop should exit (Rodolfo Schulz de Lima)


2.8.7
-----

All:

- Fixed bug with default proxy destruction in wxURL (Axel Gembe).

wxMSW:

- Correct (harmless) warnings given for forward-declared DLL-exported classes
  by mingw32 4.2 (Tim Stahlhut).

wxGTK:

- Added gtk.window.force-background-colour wxSystemOptions option to work around
  a background colour bug in the gtk-qt theme under KDE.
- Implemented wxGetClientDisplayRect() correctly for wxGTK and X11-based ports.


2.8.6
-----

All:

- Fixed another bug in wxFileConfig when deleting entries (Axel Gembe)
- Added Portuguese translation (Antonio Cardoso Martins)


2.8.5
-----

All (GUI):
